# Desafio_GCP

./: README.md  TESTE DE TSQL.docx  pyproject.toml  teste 3.docx
Arquivos de Apoio/: DRE 01-2022.xlsx  DRE 02-2022.xlsx  DRE 11-2021.xlsx  DRE 12-2021.xlsx  Exemplo-SaidaEsperada.xlsx
TESTE DO BIGQUERY & PYTHON/: bigquery.py  teste.py
TESTE DO BIGQUERY & PYTHON/data/: teste-gcp-py-chrystian-f4cffb90d1ae.json
TESTE DO STORAGE DO GCP & PYTHON/GCP/: funcoes_auxiliares.py  main.py
arquivos/: blob.txt
data/: teste2.txt
gcp/: cloud.py  funcoes_auxiliares.py
results/: dados normalizadosDRE 01-2022.xlsx.xlsx  dados normalizadosDRE 02-2022.xlsx.xlsx  teste.xlsx  teste2.xlsx
tests/: teste.py  teste1.py
