[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-auth = "^2.19.1"
google-oauth2-tool = "^0.0.3"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.9.0"
fsspec = "^2023.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
